cmake_minimum_required(VERSION 3.0.0)
set(CMAKE_CXX_STANDARD 17)
add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
project(PathPlanning VERSION 0.1.0)

include(CTest)
enable_testing()
find_package(opencv REQUIRED)
find_package(spdlog CONFIG REQUIRED)
include_directories(include)
aux_source_directory(src SRC)
aux_source_directory(src/Search2d Search2dSRC)
message(STATUS "SRC: ${SRC}")
add_executable(${PROJECT_NAME} main.cpp ${SRC} ${Search2dSRC})
target_link_libraries(${PROJECT_NAME} PRIVATE  ${OpenCV_LIBS} spdlog::spdlog spdlog::spdlog_header_only)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
